--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PusakaBangsa",
+  "name": "GithubRepositoryExplorer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,6 @@
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@types/react-lazy-load-image-component": "^1.5.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage -u",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "lint": "eslint ."
@@ -47,8 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -56,11 +57,17 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7",
-    "ts-loader": "^9.4.2"
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1"
   },
   "lint-staged": {
     "*.{js, jsx, ts, tsx}": [
