--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-GITHUB_API=https://api.github.com/user/repos
-GITHUB_TOKEN=xxxxxx
+REACT_APP_GITHUB_API=https://api.github.com/user/repos
+REACT_APP_GITHUB_TOKEN=xxxxxx
